--- a/sass/components/_progects-sampie.scss
+++ b/sass/components/_progects-sampie.scss
@@ -11,7 +11,7 @@
   }
 }
 
-.conteiner__team {
+.conteiner {
   width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
@@ -43,7 +43,7 @@
   display: block;
 }
 
-.conteiner__progect .team-ul {
+.conteiner .team-ul {
   margin-top: 0px;
   margin-bottom: 0;
 }
