--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -16,12 +16,13 @@
 }
 
 .conteiner__footer {
+  display: flex;
   margin-right: 70px;
   justify-content: space-between;
 }
 
-.conteiner__fot {
-  display: flex;
+.conteiner {
+ 
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
