--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -20,3 +20,19 @@ body {
 ul {
   list-style: none;
 }
+
+.conteiner {
+    min-width: 320px;
+    max-width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+  
+    @media screen and(min-width:768px) {
+      min-width: 768px;
+    }
+    @media screen and(min-width:1200px) {
+      min-width: 1200px;
+    }
+  }
