--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -14,63 +14,65 @@
   }
 }
 
-.header {
-  border-bottom: 1px solid #eeeeee;
-  min-height: 80px;
-}
+// .header {
+//   border-bottom: 1px solid #eeeeee;
+//   min-height: 80px;
+// }
 
-.header__nav,
-.header__navigation,
-.conteiner__header {
-  display: flex;
-}
+// .header__nav,
+// .header__navigation,
+// .conteiner,
+// .header__menu {
+//   display: flex;
+// }
 
-.header__navigation,
-.header__contact {
-  display: none;
-}
+// .header__navigation,
+// .header__contact {
+//   display: none;
+// }
 
-.header__web {
-  padding-top: 24px;
-  padding-bottom: 25px;
-  display: block;
+// .header__web {
+//   padding-top: 24px;
+//   padding-left: 8px;
+//   padding-bottom: 25px;
+//   display: block;
 
-  font-family: Raleway, sans-serif;
-  font-style: normal;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: $blue-text;
-  text-decoration: none;
-}
+//   font-family: Raleway, sans-serif;
+//   font-style: normal;
+//   font-size: 26px;
+//   line-height: 1.19;
+//   letter-spacing: 0.03em;
+//   color: $blue-text;
+//   text-decoration: none;
+// }
 
-.header__logo {
-  padding-top: 24px;
-  padding-bottom: 25px;
-  display: block;
+// .header__logo {
+//   padding-top: 24px;
+//   padding-bottom: 25px;
+//   display: block;
 
-  font-family: Raleway, sans-serif;
-  font-style: normal;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: $nav-text;
-  text-decoration: none;
-}
+//   font-family: Raleway, sans-serif;
+//   font-style: normal;
+//   font-size: 26px;
+//   line-height: 1.19;
+//   letter-spacing: 0.03em;
+//   color: $nav-text;
+//   text-decoration: none;
+// }
 
-.header__name {
-  text-decoration: none;
-  display: flex;
-}
+// .header__name {
+//   text-decoration: none;
+//   display: flex;
+// }
 
-.header__menu {
-  margin-left: auto;
-  margin-top: 10px;
+// .header__menu {
+//   margin-left: auto;
+//   margin-top: 10px;
 
-  &:hover,
-  &:focus {
-    fill: $blue-text;
-    cursor: pointer;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
+//   &:hover,
+//   &:focus {
+//     fill: $blue-text;
+//     cursor: pointer;
+//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   }
+// }
